--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,11 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "redux": "^4.2.0",
+    "react-transition-group": "^4.4.5",
+    "react-router-dom": "^6.4.3",
+    "react-redux": "^8.0.5",
+    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "git": "npm start && git add . && git commit -m $coment",
+    "cpTS": "cd src && mkdir components && mkdir config && cd config && touch config.ts && echo 'export const config = {\n}' > config.ts && cd .. && mkdir store && cd store && touch store.ts && mkdir reducers && cd .. && mkdir hook && cd hook && touch redux.ts && cd .. && mkdir models && cd .."
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
