--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -21,6 +19,8 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
+    "sass": "^1.57.1",
+    "scss": "^0.2.4",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
